#uglifyOptions 版本更新 warnings 注释

--- a/src/assets/style/common/global.css
+++ b/src/assets/style/common/global.css
@@ -21,6 +21,11 @@ input,
 button {
   line-height: inherit;
 }
+/*1px 边框*/
+.border_1px {
+  border: 1px solid transparent;
+  border-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' height='2px'%3E%3Crect fill='%2300b1ff' width='100%25' height='50%25'/%3E%3C/svg%3E") 2 2 stretch;
+}
 @font-face {
   /*url('icon.eot?#iefix') format('embedded-opentype'),*/
   /*IE 私有的 果无须兼容 IE8 浏览器 可舍弃*/
