--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -1,3 +1,33 @@
 
 @import './pages/index.less';
 @import './common/global.less';
+
+#testRxjs{
+    .video-fixed{
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        width: 320px;
+        height: 150px;
+        cursor: all-scroll;
+        .masker {
+            display: none;
+        }
+        &:hover {
+            .masker {
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 180px;
+                background-color: rgba(0, 0, 0, 0.8);
+                z-index: 2;
+            }
+        }
+    }
+    img{
+        position: absolute;
+        border-radius: 50%;
+        border: 3px white solid;
+        transform: translate3d(0,0,0);
+    }
+}
