--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -7,8 +7,8 @@
         position: fixed;
         top: 10px;
         left: 10px;
-        width: 320px;
-        height: 150px;
+        width: 320px!important;
+        height: 180px!important;
         cursor: all-scroll;
         .masker {
             display: none;
