--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -31,3 +31,23 @@
         transform: translate3d(0,0,0);
     }
 }
+
+
+.test-cover {
+    &::before,&::after{
+        content: ' ';
+        display: block;
+        height: 0px;
+        clear: both;
+    }
+    .test-item{
+        float: left;
+        width: 1/3 * 100%;
+        padding: 10px;
+        >div{
+            padding: 20px 0;
+            font-size: 16px;
+            background-color: #eee;
+        }
+    }
+}
